propellor (4.9.1) UNRELEASED; urgency=medium

  * Add Typeable instance to OriginUrl, fixing build with old versions
    of ghc.

 -- Joey Hess <id@joeyh.name>  Thu, 02 Nov 2017 10:28:44 -0400

propellor (4.9.0) unstable; urgency=medium

  * When the ipv4 and ipv6 properties are used with a container, avoid
    propagating the address out to the host.
  * DnsInfo has been replaced with DnsInfoPropagated and
    DnsInfoUnpropagated. (API change)
  * Code that used fromDnsInfo . fromInfo changes to use getDnsInfo.
  * addDNS takes an additional Bool parameter to control whether
    the DNS info should propagate out of containers. (API change)
  * Made the PropellorRepo.hasOriginUrl property override the repository
    url that --spin passes to a host.
  * PropellorRepo.hasOriginUrl type changed to include HasInfo. (API change)
  * Fstab.mounted: Create mount point if necessary, and mount it
    if it's not already mounted.
    Thanks, Nicolas Schodet
  * Properties that check for an empty directory now treat a directory
    containing only "lost+found" as effectively empty, to support
    situations where the directory is a mount point of an EXT* filesystem.
    Thanks, Nicolas Schodet
  * Make addInfo accumulate Info in order properties appear, not
    reverse order.
    This fixes a bug involving reverting Systemd.resolvConfed or
    Systemd.linkJournal.

 -- Joey Hess <id@joeyh.name>  Wed, 25 Oct 2017 13:02:14 -0400

propellor (4.8.1) unstable; urgency=medium

  * Borg: Fix propigation of exit status of borg backup.
  * Borg: Fix handling of UseSshKey.

 -- Joey Hess <id@joeyh.name>  Mon, 25 Sep 2017 17:19:49 -0400

propellor (4.8.0) unstable; urgency=medium

  * DiskImage: Made a DiskImage type class, so that different disk image
    formats can be implemented. The properties in this module can generate
    any type that is a member of DiskImage. (API change)
    (To convert existing configs, convert the filename of the disk image
    to RawDiskImage filename.)