@@ -2,6 +2,7 @@ propellor (4.9.1) UNRELEASED; urgency=medium
 
   * Add Typeable instance to OriginUrl, fixing build with old versions
     of ghc.
+  * Added Propellor.Property.impossible
 
  -- Joey Hess <id@joeyh.name>  Thu, 02 Nov 2017 10:28:44 -0400
 
